@@ -3,7 +3,11 @@ package de.tum.in.www1.artemis.service.exam;
 import static de.tum.in.www1.artemis.config.Constants.PROFILE_CORE;
 
 import java.time.ZonedDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import jakarta.validation.constraints.NotNull;
@@ -21,7 +25,12 @@ import de.tum.in.www1.artemis.domain.exam.StudentExam;
 import de.tum.in.www1.artemis.domain.participation.StudentParticipation;
 import de.tum.in.www1.artemis.domain.quiz.QuizExercise;
 import de.tum.in.www1.artemis.domain.quiz.QuizSubmission;
-import de.tum.in.www1.artemis.repository.*;
+import de.tum.in.www1.artemis.repository.QuizExerciseRepository;
+import de.tum.in.www1.artemis.repository.QuizSubmissionRepository;
+import de.tum.in.www1.artemis.repository.ResultRepository;
+import de.tum.in.www1.artemis.repository.StudentParticipationRepository;
+import de.tum.in.www1.artemis.repository.SubmissionRepository;
+import de.tum.in.www1.artemis.repository.SubmittedAnswerRepository;
 import de.tum.in.www1.artemis.service.QuizStatisticService;
 import de.tum.in.www1.artemis.service.ResultService;
 import de.tum.in.www1.artemis.service.util.TimeLogUtil;
@@ -153,7 +162,7 @@ public class ExamQuizService {
      * 2. mark submission and participation as evaluated
      * 3. Create a new result for the selected submission and calculate scores
      * 4. Save the updated submission & participation and the newly created result
-     *
+     * <p>
      * After processing all participations, the created results will be returned for further processing
      * Note: We ignore test run participations
      * // @formatter:on
@@ -185,7 +194,7 @@ public class ExamQuizService {
 
                         // Load submission with highest id
                         submissionsList.sort(Comparator.comparing(Submission::getId).reversed());
-                        quizSubmission = (QuizSubmission) submissionsList.get(0);
+                        quizSubmission = (QuizSubmission) submissionsList.getFirst();
                     }
                     else {
                         quizSubmission = (QuizSubmission) submissions.iterator().next();
